Use the iterator instead of higherKey(); use the iterator API instead of stream